tests/build/cases/widget_new/unknown_special_value_in_when.stderr
error: unexpected token
 --> cases/widget_new/unknown_special_value_in_when.rs:8:25
  |
8 |             margin = foo!;
  |                         ^

warning: unused imports: `margin`, `states::is_pressed`
 --> cases/widget_new/unknown_special_value_in_when.rs:1:27
  |
1 | use zero_ui::properties::{margin, states::is_pressed};
  |                           ^^^^^^  ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
